# GAMETRACK

./: .gitignore  CHANGELOG.md  RELEASING.md  index.html  manifest.json  package-lock.json  package.json  sw.js  vite.config.js
.github/workflows/: release.yml
CSS/: base.css  layout.css
CSS/components/: alerts.css  animations.css  background.css  buttons.css  cards.css  dashboard.css  forms.css  history.css  install.css  loader.css  logo.css  navbar.css  roulette-bets.css  roulette-history.css  roulette-layout.css  roulette-result.css  roulette-strategies.css  roulette-wheel.css  settings.css  stats.css  updater.css
CSS/components/background/: base.css  decorations.css  keyframes.css  mobile.css  particle-animation.css  particles.css
CSS/components/dashboard/: activity.css  hero-stats.css  hero.css  player.css  responsive.css
CSS/components/loader/: animations.css  content.css  logo.css  overlay.css  progress.css  responsive.css
CSS/pages/: insights.css
JS/: alerts.js  app.js  insights.js  main.js  pwa-updater.js  roulette.js  sessions.js  storage.js  tauri-updater.js  ui.js
JS/tauri-updater/: config.js  helpers.js  lifecycle.js  modal.js  operations.js
PAGES/configuracion/: index.html
PAGES/estadisticas/: index.html
PAGES/historial/: index.html
PAGES/insights/: index.html
PAGES/roulette/: index.html
scripts/: build-signed-local.mjs  check-version.mjs  format-check.mjs  generate-latest-json.mjs  set-version.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
(+64 files in other folders)
